####################################### measures ##################################

__top_builddir__lib_libnissa_a_SOURCES+=

include_HEADERS+= \
	%D%/contract/optimized_mesons_2pts.hpp \
	%D%/fermions/fermionic_meas.hpp \
	%D%/fermions/mesons.hpp \
	%D%/fermions/magnetization.hpp \
	%D%/fermions/minmax_eigenvalues.hpp \
	%D%/fermions/nucleon.hpp \
	%D%/fermions/putpourri.hpp \
	%D%/fermions/qed_corr.hpp \
	%D%/fermions/rendens.hpp \
	%D%/fermions/spectral_projectors.hpp \
	%D%/fermions/spinpol.hpp \
	%D%/fermions/stag.hpp \
	%D%/fermions/tm_corr_op.hpp \
	%D%/fermions/tm_tuning.hpp \
	%D%/fermions/zumba.hpp \
	%D%/gauge/all_rectangles.hpp \
	%D%/gauge/pline.hpp \
	%D%/gauge/topological_charge.hpp \
	%D%/gauge/watusso.hpp

# %D%/contract/optimized_mesons_2pts.cpp \
# %D%/contract/tm_meson_2pts.cpp \
# %D%/contract/tm_baryon.cpp \
# %D%/gauge/all_rectangles.cpp \
# %D%/gauge/pline.cpp \
# %D%/gauge/topological_charge.cpp \
# %D%/gauge/watusso.cpp
# %D%/fermions/mesons.cpp \
# %D%/fermions/magnetization.cpp \
# %D%/fermions/minmax_eigenvalues.cpp \
# %D%/fermions/nucleon.cpp \
# %D%/fermions/putpourri.cpp \
# %D%/fermions/qed_corr.cpp \
# %D%/fermions/rendens.cpp \
# %D%/fermions/spectral_projectors.cpp \
# %D%/fermions/spinpol.cpp \
# %D%/fermions/stag.cpp \
# %D%/fermions/tm_corr_op.cpp \
# %D%/fermions/tm_tuning.cpp \
# %D%/fermions/zumba.cpp
