####################################### measures ##################################

__top_builddir__lib_libnissa_a_SOURCES+=

include_HEADERS+= \
	%D%/contract/optimized_mesons_2pts.hpp \
	%D%/fermions/ellesettete.hpp \
	%D%/fermions/fermionic_meas.hpp \
	%D%/fermions/mesons.hpp \
	%D%/fermions/magnetization.hpp \
	%D%/fermions/minmax_eigenvalues.hpp \
	%D%/fermions/nucleon.hpp \
	%D%/fermions/putpourri.hpp \
	%D%/fermions/qed_corr.hpp \
	%D%/fermions/rendens.hpp \
	%D%/fermions/spectral_projectors.hpp \
	%D%/fermions/spinpol.hpp \
	%D%/fermions/stag.hpp \
	%D%/fermions/tm_corr_op.hpp \
	%D%/fermions/tm_tuning.hpp \
	%D%/fermions/zumba.hpp \
	%D%/gauge/all_rectangles.hpp \
	%D%/gauge/pline.hpp \
	%D%/gauge/topological_charge.hpp \
	%D%/gauge/watusso.hpp
