########################################## new types #################################

__top_builddir__lib_libnissa_a_SOURCES+= \
	%D%/complex.cpp \
	%D%/dirac.cpp \
	%D%/float_128.cpp \
	%D%/float_256.cpp \
	%D%/metadynamics.cpp \
	%D%/high_prec.cpp \
	%D%/spin.cpp \
	%D%/su3_op.cpp

include_HEADERS+= \
	%D%/complex.hpp \
	%D%/dirac.hpp \
	%D%/float_128.hpp \
	%D%/float_256.hpp \
	%D%/high_prec.hpp \
	%D%/metadynamics.hpp \
	%D%/rat_approx.hpp \
	%D%/spin.hpp \
	%D%/su3.hpp \
	%D%/su3_op.hpp \
	%D%/value_with_extreme.hpp
