########################################## new types #################################

__top_builddir__lib_libnissa_a_SOURCES+= \
	%D%/complex.cpp \
	%D%/dirac.cpp \
	%D%/float_128.cpp \
	%D%/metadynamics.cpp \
	%D%/spin.cpp \
	%D%/su3_op.cpp

include_HEADERS+= \
	%D%/complex.hpp \
	%D%/dirac.hpp \
	%D%/float_128.hpp \
	%D%/metadynamics.hpp \
	%D%/spin.hpp \
	%D%/su3.hpp \
	%D%/su3_op.hpp \
	%D%/value_with_extreme.hpp
