####################################### operations ##################################

__top_builddir__lib_libnissa_a_SOURCES+= \
	%D%/fft.cpp \
	%D%/gauge_fixing.cpp \
	%D%/localizer.cpp \
	%D%/remap_vector.cpp \
	%D%/su3_paths/gauge_sweeper.cpp \
	%D%/vector_gather.cpp

# %D%/source.cpp \
# %D%/covariant_derivative.cpp \
# %D%/gaugeconf.cpp \
# %D%/smearing/hex.cpp \
# %D%/smearing/HYP.cpp \
# %D%/smearing/smooth.cpp \
# %D%/smearing/stout_common.cpp \
# %D%/smearing/stout_eo.cpp \
# %D%/smearing/stout_lx.cpp \
# %D%/smearing/Wflow.cpp \
# %D%/su3_paths/arbitrary.cpp \
# %D%/su3_paths/clover_term.cpp \
# %D%/su3_paths/rectangles.cpp

include_HEADERS+= \
	%D%/covariant_derivative.hpp \
	%D%/fft.hpp \
	%D%/gauge_fixing.hpp \
	%D%/gaugeconf.hpp \
	%D%/localizer.hpp \
	%D%/remap_vector.hpp \
	%D%/shift.hpp \
	%D%/source.hpp \
	%D%/remez/remez_algorithm.hpp \
	%D%/smearing/APE.hpp \
	%D%/smearing/cooling.hpp \
	%D%/smearing/gaussian.hpp \
	%D%/smearing/hex.hpp \
	%D%/smearing/HYP.hpp \
	%D%/smearing/recursive_Wflower.hpp \
	%D%/smearing/smooth.hpp \
	%D%/smearing/stout.hpp \
	%D%/smearing/Wflow.hpp \
	%D%/su3_paths/arbitrary.hpp \
	%D%/su3_paths/clover_term.hpp \
	%D%/su3_paths/gauge_sweeper.hpp \
	%D%/su3_paths/plaquette.hpp \
	%D%/su3_paths/rectangles.hpp \
	%D%/su3_paths/rectangular_staples.hpp \
	%D%/su3_paths/squared_staples.hpp \
	%D%/vector_gather.hpp

#	%D%/remez/remez_algorithm.cpp \
#	%D%/su3_paths/rectangular_staples.cpp \
#	%D%/su3_paths/squared_staples.cpp 
