####################################### operations ##################################

__top_builddir__lib_libnissa_a_SOURCES+= \
	%D%/fft.cpp \
	%D%/localizer.cpp \
	%D%/remap_vector.cpp \
	%D%/vector_gather.cpp

include_HEADERS+= \
	%D%/fft.hpp \
	%D%/gaugeconf.hpp \
	%D%/localizer.hpp \
	%D%/remap_vector.hpp \
	%D%/vector_gather.hpp
